<resources>
    <string name="app_name">iRecycle</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="icon_description_text">Icon description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    LOGIN / REGISTER ACTIVITY-->
    <string name="login_email_hint">Correo electrónico</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_text">Ingresar</string>
    <string name="error_sign_in_text">Error to sign in. Code: </string>
    <string name="error_register_text">Error to register. Code: </string>
    <string name="unable_to_create_project_text">Unable to create project</string>
    <string name="email_is_required_text">Correo es requerido</string>
    <string name="password_is_required_text">Contraseña es requerido</string>
    <string name="email_example_text" color="#7C7B7B">example@email.com</string>
    <string name="password_text">Contraseña</string>
    <string name="register_text">Register</string>
    <string name="loading_text">Cargando...</string>

    <!--    PROFILE FRAGMENT-->
    <string name="profile_text">Profile</string>
    <string name="edit_text">Edit</string>
    <string name="avatar_text">Avatar</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="sign_out_text">Cerrar sesión</string>
    <string name="sign_out_msg_text">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="take_photo_text">Tomar Foto</string>
    <string name="choose_photo_text">Escoger Foto</string>
    <string name="change_name_text">Cambiar nombre de usuario</string>
    <string name="ok_text">OK</string>
    <string name="yes_text">Sí</string>
    <string name="username_updated_text">Nombre actualizado exitosamente</string>
    <string name="unable_to_update_username">Error en actualizar el nombre</string>
    <string name="unexpected_error_text">Error inesperado. Intentar de nuevo.</string>
    <string name="cancel_text">Cancelar</string>
    <string name="title_activity_maps">Map</string>


    <!--    MATERIALES-->
    <string name="reciclaje_mecanico">
        <b>Reciclaje mecánico:</b>
        Consta de convertir el material en pequeñas unidades para posteriormente crear nuevos productos. </string>
    <string name="reciclaje_quimico">
        <b>Reciclaje químico: </b>
        Se realiza por medio de la degradación del plástico usando calor o catalizadores para romper las macromoléculas y dar como resultados moléculas más simples.
    </string>

    <string name="recoleccion_separacion">
        <b>Recoleccion y separacion: </b> El vidrio es recolectado de personas y empresas y se agrupan por color.
    </string>
    <string name="limpieza">
        <b>Limpieza: </b> Se trata con productos químicos y aguas para eliminar suciedad y eliminar elementos de papel y otros residuos.
    </string>

    <string name="triturado">
        <b>Triturado: </b> El vidrio es triturado y derretido nuevamente. Los residuos llamados calcin son calentados a 1600 grados con una mezcla hidróxido de sodio y caliza para crear nuevos productos.
    </string>


</resources>
