<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/change_name_text"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="textPersonName"
            android:textColor="@color/primary_text_color"
            android:alpha="0.87"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:outlineProvider="none"
            android:text="@string/cancel_text"
            android:textColor="@color/colorPrimary"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:outlineProvider="none"
            android:text="@string/ok_text"
            android:textColor="@color/colorPrimary"
            app:iconTint="@android:color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>